resources/css/style.css
body {
  margin: 0px;
  padding: 0px;
}

header {
  font-family: Verdana;
  font-size: 14px;
  font-weight: bold;
  display: flex;
  align-items: center;
  position: fixed;
  width: 100%;
  border-bottom: 1px solid black;
  height: 80px;
  z-index: 1;
  background: white;
}

header nav {
  padding-right: 40px;
}

nav span {
  display: inline-block;
  padding: 20px 10px;
}


.logo {
  display: flex;
  align-items: center;
  flex-grow: 1;
  padding-left: 30px;
}

.logo img {
  height: 60px;
  width: 70px;
  margin-right: 12px;
}

.logo span {
  color: MediumAquaMarine;
}

a {
  color: black;
}

.container {
  display: flex;
  justify-content: center;
  margin: 0 auto 78px auto;
  padding-top: 116px;
}

.column.large {
  width: 630px;
  margin-right: 32px;
}

.column.medium {
  width: 300px;
  margin-right: 32px;
}

.column.small {
  width: 240px;
  margin-right: 32px;
}

.lead-story .image-content {
  background-image: url(../images/img-story-main.png);
  width: 100%;
  margin-top: 0;
  text-align: left;
  font-size: 40px;
}
.lead-story .image-content span {
  margin-left: 20px;
}

.image-content {
  display: flex;
  height: 300px;
  margin-top: 15px;
  font-family: Georgia;
  font-weight: bold;
  color: white;
  font-size: 30px;
  text-align: center;
  align-items: center;
}

.image-content.earth {
  background-image: url(../images/img-story-2.png);
  margin-top: 40px;
}

.image-content.camera {
  background-image: url(../images/img-story-3.png);
  margin-top: 40px;
}

.image-content.cat {
  background-image: url(../images/img-story-1.png);
}

.story {
  font-family: Georgia;
  color: black;
  width: 300px;
  display: flex;
  flex-direction: column;
}

.stories {
  display: flex;
  justify-content: space-between;
  margin-top: 17px;
}

.narrative {
  margin-top: 16px;
}

p {
  font-size: 17px;
}

h2 {
  font-size: 30px;
}

.news-bites {
  display: flex;
  flex-direction: column;
}

.news-bites h3 {
  font-size: 16px;
  font-weight: bold;
}

.news-bites span {
  background-color: whitesmoke;
  font-family: Verdana;
  font-size: 12px;
  color: DimGray;
  border-bottom: 1px solid black;
  margin: 0;
  padding: 11px 20px;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 325px;
  width: 100%;
  background-color: MediumAquaMarine;
  margin: auto;
  font-family: Verdana;
  font-size: 12px;
}

footer .title {
  display: inline-block;
  padding-right: 25px;
  border-right: 2px solid white;
  font-family: Georgia;
  font-size: 16px;
  font-weight: bold;
  color: white;
}

footer nav {
  display: inline-block;
  padding-left: 25px;
}

